--- a/src/app/Components/texto-imagen-home/texto-imagen-home.component.html
+++ b/src/app/Components/texto-imagen-home/texto-imagen-home.component.html
@@ -4,7 +4,7 @@
 
     <div [innerHTML]="contentTextImageItem.content.rendered" class=""></div>
     <div class="">
-      <img src="{{contentTextImageItem._embedded['wp:featuredmedia'][0].source_url}}" alt="">
+      <img src="{{contentTextImageItem._embedded['wp:featuredmedia'][0].source_url}}" alt="" data-bs-placement="top" data-bs-toggle="tooltip">
     </div>
 
   </div>
